2009-03-04  Alberto Garcia  <agarcia@igalia.com>

	* src/hildon-program-private.h
	* src/hildon-program.c
	(hildon_program_set_common_menu)
	(hildon_program_get_common_menu)
	(hildon_program_set_common_app_menu)
	(hildon_program_get_common_app_menu):
	Change common menu pointers from GtkWidget* to GtkMenu* and
	HildonAppMenu* to avoid unnecessary casts.

2009-03-03  Alberto Garcia  <agarcia@igalia.com>

	* src/hildon-window.c (hildon_window_set_main_menu):
	Removed incorrect 'Since:' tag

2009-03-03  Alejandro G. Castro  <alex@igalia.com>

	* src/hildon-pannable-area.c,
	(hildon_pannable_area_calculate_velocity): We use now the
	RATIO_TOLERANCE here to check the distance, fixed typo in the
	algorithm.
	(hildon_pannable_area_motion_notify_cb): We have to set the type
	and time even if we are not sending the motion.

2009-03-02  Alberto Garcia  <agarcia@igalia.com>

	* doc/hildon-sections.txt
	* src/hildon-app-menu.h
	* src/hildon-app-menu.c (+hildon_app_menu_get_items)
	(+hildon_app_menu_get_filters): New methods to get the contents of
	a HildonAppMenu.

	Fixes: NB#103761 (HildonAppMenu doesn't have methods to get its
	children)

2009-03-02  Alberto Garcia  <agarcia@igalia.com>

	* src/hildon-app-menu.c (hildon_app_menu_popup):
	Add "Since" tag.

2009-03-02  Alberto Garcia  <agarcia@igalia.com>

	* src/hildon-window.h
	* src/hildon-window.c (+hildon_window_get_main_menu)
	(hildon_window_get_menu): Created hildon_window_get_main_menu()
	and deprecated hildon_window_get_menu().

	* src/hildon-stackable-window.h
	* src/hildon-stackable-window.c
	(+hildon_stackable_window_set_app_menu)
	(+hildon_stackable_window_get_app_menu)
	(hildon_stackable_window_set_main_menu): Created
	hildon_stackable_window_{get,set}_app_menu() and deprecated
	hildon_stackable_window_set_main_menu().

	* doc/hildon-sections.txt
	* examples/hildon-app-menu-example.c (main)
	* src/hildon-app-menu.c
	* src/hildon-program.c:
	Updated examples and documentation.
